# promptmaster-lite

./: .cursorrules  .gitignore  CLAUDE.md  GEMINI.md  README.md  TASKS.md  core_editing_experience_spec.md  jest.config.cjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts
.github/workflows/: ci.yml
src/: App.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: categories.rs  database.rs  db.rs  error.rs  logging.rs  main.rs  metadata.rs  migration_status.rs  migrations.rs  prompts.rs  search.rs  security.rs  versions.rs  watcher.rs
src-tauri/src/migrations/: README.md  m001_fts5_setup.rs
src/components/: Layout.tsx
src/components/categories/: CategoryTree.tsx  CreateCategoryModal.tsx  DeleteCategoryModal.tsx  RenameCategoryModal.tsx
src/components/editor/: LivePreview.tsx  PromptDiff.tsx  PromptEditor.tsx
src/components/help/: KeyboardShortcutsModal.tsx
src/components/metadata/: CategoryPicker.tsx  DynamicFormField.tsx  DynamicMetadataSidebar.tsx  (+4 more)
src/contexts/: CategoryContext.tsx
src/examples/: pluginExample.ts
src/hooks/: useDebounce.ts  useHotkeys.ts  usePerformanceMonitor.ts
src/pages/: Dashboard.tsx  EditorScreen.tsx  NewPrompt.tsx
src/services/: categoryUtils.ts  hooks.ts  metadataSchema.ts  pluginRegistry.ts  searchParser.ts  securityService.ts  variableParser.ts
tests/: setup.ts
tests/e2e/: edit-save-diff.spec.ts  setup.ts  variable-substitution.spec.ts  version-history.spec.ts
tests/integration/: components.test.tsx  performance.test.ts  variable-workflow.test.tsx
(+9 files in other folders)
